# python-libs

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  Makefile  Pipfile  README.md  cleanup_tests.py  docker-compose.yml  pyproject.toml  pytest.ini  run.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: cdk-deployment.yml  code-analysis.yml  localstack-test.yml  pipeline-artifacts.yml  python-tests.yml
features/: comprehensive_mocking_framework.feature  environment.py  pomodoro.feature
features/steps/: mocking_framework_steps.py  pomodoro_steps.py
infra/: .env.aws  .env.example  Makefile  README.md  access_artifacts.py  build_and_upload.py  create_s3_bucket.py  downloaded_readme.md  e2e_deploy.py  localstack_setup.py  requirements.txt  setup.py  simulate_pipeline.py
infra/cdk/: app.py  cdk.json
infra/cdk/cdk.out/: manifest.json  python-libs-artifact-stack.assets.json  python-libs-artifact-stack.template.json  tree.json
infra/cdk/stacks/: artifact_stack.py  pipeline_stack.py
infra/docs/: github-actions-integration.md
infra/scripts/: requirements-oidc.txt  setup_github_oidc.py  update_workflow_arns.py
resources/: logging_config.ini
src/: __init__.py
src/pomodoro/: pomodoro.py
src/runners/: README.md  pomodoro.py  run.py
src/utils/: audio.py  env_checks.py  environment.py  get_resource_path.py  logging_setup.py
src/utils/abstract/: abstract_runner.py  abstract_singleton.py  abstract_strategy.py
src/utils/env_checks/: env_checks.py
src/utils/logging/: LoggerStream.py  LoggingConfigSingleton.py  LoggingSingleton.py  cross_platform_config.py  logger_stream.py  logging_config_singleton.py  logging_setup.py
src/utils/media/: audio.py
src/utils/module/: ModuleRunnerFactory.py  ModuleRunnerSingleton.py  module_runner_singleton.py
src/utils/test/: MockContextManager.py  MockFixture.py  MockManager.py  (+11 more)
tests/: conftest.py  shared_annotations.py
tests/pomodoro/: conftest.py  test_pomodoro.py
tests/utils/: conftest.py  test_audio.py  test_logging_setup.py
(+18 files in other folders)
