[tool.poetry]
name = "my-utils-library"
version = "0.1.0"
description = "A utility library for personal projects"
authors = ["Your Name <youremail@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^8.3"  # For running tests
flake8 = "^7.1"
pytest-cov = "^6.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
