[tool.poetry]
name = "python monorepo"
version = "0.1.0"
description = "This is my monorepo for personal projects"
authors = ["Joey <josephrobertlopez@gmail.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pyinstaller = "^6.11.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
behave = "^1.2.6"
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
flake8 = "^7.1.1"  # Ensures flake8 is available
pytest-cov = "^6.0.0"

[tool.poetry.group.pomodoro.dependencies]
pygame = "^2.1.3"  # Ensure pygame is in the pomodoro group

[tool.poetry.dev-dependencies]
pytest = "^8.3"  # For running tests
flake8 = "^7.1"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
